--- a/src/components/ui/Front1/Side-Left/Rating/RatingStars.module.css
+++ b/src/components/ui/Front1/Side-Left/Rating/RatingStars.module.css
@@ -1,6 +1,22 @@
 .ratingContainer {
     position: relative;
     width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.ratingContainer.small .star {
+    width: 16px;
+    height: 16px;
+}
+.ratingContainer.medium .star {
+    width: 24px;
+    height: 24px;
+}
+.ratingContainer.large .star {
+    width: 32px;
+    height: 32px;
 }
 
 .starsContainer {
@@ -12,31 +28,27 @@
 
 .starWrapper {
     position: relative;
-    width: 24px;
-    height: 24px;
+    width: auto;
+    height: auto;
     flex-shrink: 0;
 }
 
 .star {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 24px;
-    height: 24px;
     display: block;
     max-width: none;
+    transition: filter 0.2s, opacity 0.2s;
 }
 
 .ratingText {
-    position: absolute;
-    left: 4px;
-    top: 40.844px;
-    transform: translateY(-50%);
+    margin-top: 8px;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 16px;
     color: #2e2f35;
     line-height: 24px;
     white-space: nowrap;
+}
+
+.ratingContainer.dark .ratingText {
+    color: #fff;
 } 
